# Shuttle-s-Christmas-Code-Hunt

./: Cargo.toml  README.md  test.sh  test_db.sh
.github/workflows/: tests.yml
migrations/: 1_schema.sql  2_create_orders.sql  4_create_regions.sql
src/: main.rs
src/days/: day0.rs  day00.rs  day01.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day1.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day4.rs  mod.rs
src/db/: methods.rs  structs.rs
