[package]
name = "cch23-dcorreia"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.3", features = ["multipart", "ws"] }
axum-extra = { version = "0.9.1", features = ["cookie"] }
shuttle-axum = { version = "0.35.2", default-features = false, features = ["axum-0-7"] }
shuttle-runtime = "0.35.2"
tokio = "1.35.1"
tracing = "0.1.40"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
ordered-float = "4.2.0"
base64 = "0.21.5"
reqwest = "0.11.23"
tower-http = { version = "0.5.0", features = ["fs"] }
image = "0.24.7"
ulid = "1.1.0"
uuid = "1.6.1"
chrono = "0.4.31"
shuttle-shared-db = { version = "0.35.2", features = ["postgres-rustls"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "postgres"] }
html-escape = "0.2.13"
emojito = "0.3.5"
digest = "0.11.0-pre.3"
sha2 = "0.10.8"
hex = "0.4.3"
futures = "0.3.30"
tar = "0.4.40"
bytes = "1.5.0"
tempfile = "3.9.0"
git2 = "0.18.1"
s2 = "0.0.12"
iso_country = "0.1.4"
pathfinding = "4.8.1"

[dev-dependencies]
cch23-validator = "22.0.0"
axum-test = "14.2.2"
serial_test = "2.0.0"
tokio-tungstenite = "0.21.0"
tungstenite = "0.21.0"
